# center-larp

./: .pre-commit-config.yaml  CLAUDE.md  README.md  environment.yml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml  preview-deploy.yml
apps/applications/: admin.py  constants.py  forms.py  models.py  services.py  urls.py  views.py
apps/audit/: admin.py  models.py  services.py
apps/billing_morning/: admin.py  apps.py  models.py
apps/jobs/: admin.py  models.py
apps/payments_cardcom/: admin.py  apps.py  integration_event.py  models.py  services.py  urls.py  views.py
apps/public_site/: admin.py  apps.py  config_loader.py  health_urls.py  models.py  urls.py  views.py
config/: urls.py
config/settings/: base.py  constants.py  env.py  local.py  production.py
docs/: Center_LARP_Handoff_Package.docx  Center_LARP_Handoff_Package.md  implementation_plan.md
docs/backlog/: acceptance_test_matrix.md  implementation_backlog.md
docs/center_larp_frontend_handoff_adaptive/: README.md
docs/config/: application_form.example.yaml  current_event.example.yaml
docs/diagrams/: architecture.mmd  data_model.mmd  payment_flow.mmd
docs/ops/: .env.example  Dockerfile.example  deployment-checklist.md  docker-compose.example.yml  nginx.center.larp.co.il.example.conf  (+1 more)
event_config/: application_form.yaml  current_event.yaml
ops/: .env.example  Dockerfile  docker-compose.prod.yml  docker-compose.yml  nginx.center.larp.co.il.conf
resources/: landing_page.html
(+46 files in other folders)
