[project]
name = "center-larp"
version = "0.1.0"
description = "LARP event registration site for center.larp.co.il"
requires-python = ">=3.14"
dependencies = [
    "Django>=5.2,<5.3",
    "gunicorn>=23,<24",
    "psycopg[binary]>=3,<4",
    "httpx>=0.28,<1",
    "whitenoise>=6,<7",
    "pydantic>=2,<3",
    "pyyaml>=6,<7",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.7",
    "mypy==1.19.1",
    "django-stubs>=5,<6",
    "pytest>=8,<9",
    "pytest-django>=4,<5",
]

[tool.ruff]
target-version = "py314"
line-length = 120
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "DJ"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.mypy]
python_version = "3.14"
plugins = ["mypy_django_plugin.main"]
strict = false
warn_return_any = true
warn_unused_configs = true

[tool.django-stubs]
django_settings_module = "config.settings.base"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.base"
python_files = ["tests.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
